Fix layout jumping on scroll

--- a/src/small-header.styl
+++ b/src/small-header.styl
@@ -14,6 +14,8 @@ body > .main > .codex
 			cursor pointer
 
 body.small-header > .main > .codex
+	position relative
+	
 	.small-facsimile
 		h2
 			width 100%
@@ -51,9 +53,6 @@ body.small-header > .main > .codex
 		margin 0
 		
 	.tab-container
-		// top 2000px
-		// 	position absolute
-		// top 0
-		margin-top 92px
+		margin-top 76px
 		position absolute
 		left 20%
