--- a/src/views/codex/index.styl
+++ b/src/views/codex/index.styl
@@ -8,7 +8,7 @@ marginWidth = 2.5%
 marginLeft = leftWidth + (2 * marginWidth)
 
 body > .main > .codex
-	max-width 1400px
+	// max-width 1400px
 	line-height 2em
 	
 	& > div.small-facsimile
@@ -110,19 +110,23 @@ body > .main > .codex
 			&.active button
 				color white
 				
+	aside
+		float right
+				
 	.tab-container, aside, .pagination
 		transition width 250ms
 
-	// Set tagname (div) to distinguish from li.tab
 	.tab-container
 		inline-block()
 		width middleWidth
+		max-width 800px
 		background-color white
 		padding 20px
 		box-shadow 0 0 6px #999
 		border-radius 3px
 		margin-bottom 100px
 
+		// Set tagname (div) to distinguish from li.tab
 		div.tab
 			display none
 			
